# CNSistent

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.MD  README.md  REPOSITORY.md  analyze_breakpoints.ipynb  analyze_clipping.ipynb  analyze_clusters.ipynb  analyze_coverage.ipynb  analyze_lung.ipynb  analyze_runtime.ipynb  analyze_variance.ipynb  cns.py  cns.yml  cnsistent.py  cnsistent.yml  data_bin.sh  data_obtain.ipynb  data_preprocess.py  data_process.sh  data_time.sh  data_utils.py  example_API.py  example_CLI.sh  illustrations.ipynb  notebook_utils.py  pyproject.toml  requirements.txt  scratch.py  setup.py  test.tsv  test_cli.sh  test_figures.ipynb  test_genes.ipynb  test_plot_2D.ipynb  test_plots.ipynb
cns/: __init__.py  cnsistent.py  data_utils.py  pipelines.py  segment.py
data/: 20220803_TxPri_mphase_by_sample_df.reduced.csv  20220807_TxMets_prim_and_met_mphase_by_sample_df.reduced.csv  20221109_TRACERx421_all_patient_df.tsv  COSMIC_consensus_genes.tsv  Census_allFri Nov 17 10_27_09 2023.tsv  ENSEMBL_coding_genes.bed  ENSEMBL_coding_genes.tsv  MS_analysis.PCAWG_release_v1.RIKEN.tsv  PCAWG_cns_raw.tsv  PCAWG_samples_raw.tsv  TCGA_hg19_cns_raw.tsv  TCGA_hg19_samples_raw.tsv  TRACERx_cns_raw.tsv  TRACERx_met_cns_raw.tsv  TRACERx_met_samples_raw.tsv  TRACERx_prim_cns_raw.tsv  TRACERx_prim_samples_raw.tsv  TRACERx_samples_raw.tsv  essentials.tsv  obtain_data.ipynb  ogs.tsv  pcawg_cna_source.tsv  pcawg_donor_clinical_August2016.tsv  pcawg_specimen_histology_August.tsv  pcawg_supplementary_table_1.tsv  summary.ascatv3TCGA.penalty70.hg19.tsv  summary.ascatv3TCGA.penalty70.hg38.tsv  tcga_hg19_cns_source.tsv  tcga_hg38_cna_source.tsv  tsgs.tsv
docs/: chr19_gaps.tex  chr19_gaps_df.tex  cns_imp.tex  cns_imp_df.tex  cns_raw.tex  cns_raw_df.tex  conf.py  coverage_df.tex  coverage_gaps_df.tex  features_df.tex  index.rst  knee_detection.ipynb  ploidy.tex  ploidy_df.tex  segs_with_gaps_filter_df.tex  signatures.tex  times.tsv
notebooks/: analyze_SOX2_overlay.ipynb  analyze_SOX2_sim.ipynb  analyze_age.ipynb  analyze_angles.ipynb  analyze_bends.ipynb  analyze_break_clusters.ipynb  (+21 more)
(+129 files in other folders)
