[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="CNSistent"
version="0.3"
authors=[
	{name="Adam Streck", email="adam.streck@gmail.com"}
]
maintainers=[
	{name="Adam Streck", email="adam.streck@gmail.com"}
]
description="Tools for imputation, segmentation, analysis, and plotting of Copy Number Segments (CNS)."
readme="README.md"
license={text="MIT"}
requires-python = ">=3.9"


[project.scripts]
cns="cnsistent:main"

[tool.hatch.build.targets.wheel]
include = ["cns/cnsistent.py", "cns/**/*.py", "README.md", "docs/**"]
exclude = ["cns/data_utils.py"]
