[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="CNSistent"
version="0.4"
authors=[
	{name="Adam Streck", email="adam.streck@gmail.com"}
]
maintainers=[
	{name="Adam Streck", email="adam.streck@gmail.com"}
]
description="Tools for imputation, segmentation, analysis, and plotting of Copy Number Segments (CNS)."
readme="README.md"
license={text="MIT"}
requires-python = ">=3.9"
keywords = ["bioinformatics", "genomics", "copy number segments", "CNS"]


[project.dependencies]
numpy = ">=1.19.2"
pandas = ">=1.1.3"
matplotlib = ">=3.3.2"
scipy = ">=1.5.2"

[project.scripts]
cns="cnsistent:main"

[tool.hatch.build.targets.wheel]
include = ["cns/cnsistent.py", "cns/**/*.py", "README.md", "docs/**"]
exclude = ["cns/data_utils.py"]
